fix theme switch and adjust light theme colors

--- a/packages/themes/src/lib/bitil-theme/theme-light.less
+++ b/packages/themes/src/lib/bitil-theme/theme-light.less
@@ -4,9 +4,11 @@
 
 @font-family: 'Open Sans';
 @primary-color-rgb: 77, 111, 224;
-// @primary-color: #00b3f0;
-@primary-color: pink;
+@primary-color: #00b3f0;
+// @primary-color: pink;
 @body-background: #000000;
 @component-background: #000000;
 // Popover background color
 @popover-background: @component-background;
+@btn-font-weight: bolder;
+
